2007-12-07  Denis Washington <denisw@svn.gnome.org>

	** Fix for bug #500561

	* em-folder-browser.c: Added icon for mark all messages as read menu 
	item.

2007-12-06  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #263236

	* em-folder-view.c: (emfv_delete_msg_response):
	Look for "Do not ask me again" check in alignment, so
	let it works properly.

2007-12-05  Srinivasa Ragavan  <sragavan@novell.com>

	* mail-config.h: Fix a compiler warning.

2007-12-05  Srinivasa Ragavan  <sragavan@novell.com>

	** Added a preference to disable Magic Spacebar.

	* em-folder-browser.c: (html_scroll), (emfb_list_key_press): Check the cfg 
	  before invoking Magic Spacebar
	* em-mailer-prefs.c: (em_mailer_prefs_construct): Preference window handling
	* em-mailer-prefs.h:
	* evolution-mail.schemas.in:
	* mail-config.c: (gconf_magic_spacebar_changed),
	(mail_config_init), (mail_config_get_enable_magic_spacebar): Add it part of MC.
	* mail-config.glade: 
	* mail-config.h:

2007-12-04  David Turner  <cillian64@googlemail.com>

	** Fix for bug #347329

	* em-folder-selector.c: (em_folder_selector_create_new):
	Added a mnemonic to the 'Create' button of the 'New Folder' dialog

2007-12-04  Alex Kloss  <alexkloss@att.net>

	** Fix for bug #329578

	* em-account-editor.c: (emae_receive_options_item):
	Add mnemonic for "minutes" widget

2007-12-04  David Turner  <cillian64@googlemail.com>

	** Fix for bug #446029

	* em-format-html-display.c: (em_format_html_get_search_dialog):
	Fix for a mnemonic conflict in 'Find in Message' feature.

2007-12-04  Alex Kloss  <alexkloss@att.net>

	** Fix for bug #466503

	* mail-config.glade: Fix for a mnemonic conflict in 
	Preferences -> Mail Preferences -> Junk tab.

2007-12-04  David Turner  <cillian64@googlemail.com>

	** Part of fix for bug #466499

	* em-account-editor.c: (emae_option_toggle):
	Added support for mnemonics in config options from camel

2007-12-04  David Turner  <cillian64@googlemail.com>

	** Fix for bug #466497
